--- a/app/routes.yml
+++ b/app/routes.yml
@@ -132,15 +132,9 @@ parameters:
             conditions: {push: %routes.regex.pushId%}
 
         push.start:
-            method: 'GET'
+            method: ['GET', 'POST']
             route: '/builds/:build/push'
-            stack: ['login.bouncer', 'push.start.page']
-            conditions: {build: %routes.regex.buildId%}
-
-        push.start.handle:
-            method: 'POST'
-            route: '/builds/:build/push'
-            stack: ['login.bouncer', 'push.start.handler']
+            stack: ['login.bouncer', 'push.start.handler', 'push.start.page']
             conditions: {build: %routes.regex.buildId%}
 
         push.history:
