--- a/app/routes.yml
+++ b/app/routes.yml
@@ -284,6 +284,12 @@ parameters:
         # REPOSITORY DEPLOYMENT ROUTES
         ################################################################################################################
 
+        repository.deployment:
+            method: 'GET'
+            route: '/repositories/:repository/deployments/:id'
+            stack: ['login.bouncer', 'repository.deployment.page']
+            conditions: {repository: '[\d]+', id: '[\d]+'}
+
         repository.deployments:
             method: 'GET'
             route: '/repositories/:repository/deployments'
@@ -296,13 +302,19 @@ parameters:
             stack: ['repoadmin.bouncer', 'repository.deployments.add.handler', 'repository.deployments.add.page']
             conditions: {repository: '[\d]+'}
 
-        repository.deployments.remove.confirm:
+        repository.deployment.edit:
+            method: ['GET', 'POST']
+            route: '/repositories/:repository/deployments/:id/edit'
+            stack: ['repoadmin.bouncer', 'repository.deployment.edit.handler', 'repository.deployment.edit.page']
+            conditions: {repository: '[\d]+', id: '[\d]+'}
+
+        repository.deployment.remove.confirm:
             method: 'GET'
             route: '/repositories/:repository/deployments/:id/remove'
             stack: ['repoadmin.bouncer', 'delete.confirm.page']
             conditions: {repository: '[\d]+', id: '[\d]+'}
 
-        repository.deployments.remove:
+        repository.deployment.remove:
             method: 'POST'
             route: '/repositories/:repository/deployments/:id/remove'
             stack: ['repoadmin.bouncer', 'repository.deployments.remove.handler']
@@ -465,7 +477,7 @@ parameters:
         # @todo change this url because it is terrible
         api.deployment.lastpush:
             method: 'GET'
-            route: '/api/deployment/:id/lastPush'
+            route: '/api/deployment/:id/last-push'
             stack: ['cachedApi.middleware', 'api.deployment.lastpush']
             conditions: {id: '[\d]+'}
 
