--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -383,6 +383,7 @@ services:
             - @builds.twig
             - @repository.repo
             - @build.repo
+            - @slim.request
             - @slim.response
             - @slim.not.found
             - @slim.route.parameters
@@ -459,6 +460,7 @@ services:
             - @pushes.twig
             - @repository.repo
             - @push.repo
+            - @slim.request
             - @slim.response
             - @slim.not.found
             - @slim.route.parameters
