--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -158,12 +158,23 @@ services:
             - @build.repo
             - @deployment.repo
             - @push.repo
+            - @environment.repo
+            - @sticky.environment
             - @slim.response
             - @slim.not.found
             - @slim.route.parameters
     repository.status.twig:
         parent: 'twig.template'
         calls: [['setTemplate', ['repository/status.twig']]]
+
+    repository.status.sticky.handler:
+        class: 'QL\Hal\Controllers\Repository\RepositoryStatusEnvironmentSaveHandler'
+        arguments:
+            - @environment.repo
+            - @slim.request
+            - @url
+            - @sticky.environment
+            - @slim.route.parameters
 
     repository.admin.add.page:
         class: 'QL\Hal\Controllers\Repository\AddRepositoryController'
