Change rollback page to use deployment instead of server

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -446,7 +446,7 @@ services:
         arguments:
             - @rollback.twig
             - @repository.repo
-            - @server.repo
+            - @deployment.repo
             - @push.repo
             - @slim.response
             - @slim.not.found
