Add aws di params, move external services to separate di file

--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -87,3 +87,11 @@ parameters:
     permissions.hal.repos:
         - 'hal9000'
         - 'hal9000-agent'
+
+    ############################################################################
+    # aws
+    ############################################################################
+
+    aws.region: ''
+    aws.credentials.key: ''
+    aws.credentials.secret: ''
