Add aws sdk to deps, and live statuses for EB deploys

--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -45,6 +45,7 @@ parameters:
 
     cache.permissions.ttl: 600
     cache.doctrine.ttl: 600
+    cache.aws.ttl: 20
 
     ############################################################################
     # configuration
