--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         }
     ],
     "require": {
+        "aws/aws-sdk-php": "2.7.*",
+        "guzzle/guzzle": "3.9.*",
         "knplabs/github-api": "1.3.1",
         "php-64bit": "~5.4",
         "predis/predis": "~1.0",
