Add stuck jobs display to homepage for administrators

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -15,6 +15,7 @@ services:
             - @dashboard.twig
             - @currentUser
             - @permissions
+            - @clock
             - @build.repo
             - @push.repo
             - @user.repo
