--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -46,6 +46,7 @@ parameters:
     cache.permissions.ttl: 600
     cache.doctrine.ttl: 600
     cache.aws.ttl: 20
+    cache.server.ttl: 300
 
     ############################################################################
     # configuration
