--- a/app/routes.yml
+++ b/app/routes.yml
@@ -45,6 +45,10 @@ parameters:
             route:  '/debug'
             stack:  ['login.bouncer', 'debug.page']
 
+        ################################################################################################################
+        # ADMIN ROUTES
+        ################################################################################################################
+
         admin:
             method: 'GET'
             route: '/admin'
@@ -55,6 +59,16 @@ parameters:
             route: '/superadmin'
             stack: ['superadmin.bouncer', 'admin.super.page']
 
+        admin.server.status:
+            method: 'GET'
+            route: '/admin/server-status'
+            stack: ['admin.bouncer', 'admin.server.status.page']
+
+        admin.server.status.handler:
+            method: 'GET'
+            route: '/admin/server-status/:id'
+            stack: ['admin.bouncer', 'admin.server.status.handler']
+            conditions: {id: '[0-9]+'}
 
         ################################################################################################################
         # SUPER ADMIN ROUTES
