Enable caching of server status for 10 minutes

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -800,9 +800,9 @@ services:
             - @server.repo
             - @slim.route.parameters
             - %cli.user%
-        # calls:
-        #     - ['setCache', [@cache]]
-        #     - ['setCacheTTL', [%cache.server.ttl%]]
+        calls:
+            - ['setCache', [@cache]]
+            - ['setCacheTTL', [%cache.server.ttl%]]
 
     ######################################################################################################################
     # HELP CONTROLLERS
